tests/errors/pandas_col_length.ki
var pd = import("pandas")
var df = pd.DataFrame({"a": [1, 2, 3], "b": [1, 2]}, columns=["a", "b"])
